--- a/styles.css
+++ b/styles.css
@@ -20,9 +20,8 @@ body{
     display: grid;
     grid: 
         "header header header header" auto
-        "...... lists  active ......" auto /
+        "lists lists  active ......" auto /
         1fr minmax(100px,300px) minmax(250px,500px) 1fr;
-    gap:2rem;
 }
 .title{
     grid-area: header;
@@ -34,6 +33,8 @@ body{
 }
 .all-tasks{
     grid-area: lists;
+    padding-left: 2.5rem;
+    margin-left: 7.75rem;
     
 }
 .task-list-title{
@@ -200,7 +201,7 @@ form{
 }
 .btn.delete{
     opacity: 0.7;
-    font-size: 1.5rem;
+    font-size: 1rem;
     margin-top:50px;
     transition: color 200ms;
 }
